.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Company_Job_Roles__c.object
<CustomObject>
    <description>Used to store Job Role Definitions within the Company. 
Vacancies can be created from Company Job Roles which enable default Job Role definitions in the Vacancy</description>
    <fields>
        <fullName>xcdhcm__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: need to show only active company jobroles [JIRA NPPD-305]</description>
        <label>No longer in use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Authorised_posts__c</fullName>
        <label>Authorised posts</label>
        <summaryForeignKey>xcdhcm__Post__c.xcdhcm__Company_job_role_L__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Base_Salary__c</fullName>
        <description>This is the base salary for this company job role.</description>
        <inlineHelpText>Please enter the base salary for this company job role.</inlineHelpText>
        <label>Annual salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__CRB_level_required__c</fullName>
        <label>DBS level required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Commission_Bonus__c</fullName>
        <label>Commission / bonus</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Companies_Name__c</fullName>
        <label>Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Company__c.xcdhcm__Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Show all results also displays records which are no longer in use</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Company Job Roles</relationshipLabel>
        <relationshipName>Company_Job_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation_Notes__c</fullName>
        <label>Compensation notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Departments__c.xcdhcm__Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Show all will also display records which are no longer in use</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Departments__c</referenceTo>
        <relationshipLabel>Company Job Roles</relationshipLabel>
        <relationshipName>Company_Job_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Educational_Requirements__c</fullName>
        <description>The educational requirements for this company job role.</description>
        <inlineHelpText>Please enter the educational requirements for this company job role.</inlineHelpText>
        <label>Educational requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Eligible_for_overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Filled_posts__c</fullName>
        <label>Filled posts</label>
        <summaryFilterItems>
            <field>xcdhcm__Post__c.xcdhcm__Post_status__c</field>
            <operation>equals</operation>
            <value>Filled</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Post__c.xcdhcm__Company_job_role_L__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Formal_qualifications_required__c</fullName>
        <label>Formal qualifications required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Functional_Area__c</fullName>
        <description>The functional area in which the company job role is based.</description>
        <inlineHelpText>Please select the functional area in which the company job role is based.</inlineHelpText>
        <label>Functional area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Grade_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grade</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>No record exists which matches the filter criterion</errorMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Grade__c</referenceTo>
        <relationshipLabel>Company Job Roles</relationshipLabel>
        <relationshipName>Company_Job_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Grade__c</fullName>
        <label>xGrade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__JobRole_Note__c</fullName>
        <label>Job role notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_Code__c</fullName>
        <label>Job code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_Description__c</fullName>
        <description>This is the job description for this company job role.</description>
        <inlineHelpText>Please enter the job description for this company job role.</inlineHelpText>
        <label>Job description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_Role_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the company job role location.</description>
        <inlineHelpText>Please enter a location for this company job role.</inlineHelpText>
        <label>Job role location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.xcdhcm__Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Click show all to display also records which are no longer in use</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Location__c</referenceTo>
        <relationshipLabel>Company Job Roles</relationshipLabel>
        <relationshipName>Company_Job_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_evaluation_date__c</fullName>
        <label>Job evaluation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Key_user_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key user status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_OTE__c</fullName>
        <description>This is the max pay for this company job role.</description>
        <inlineHelpText>Please enter the max pay for this company job role.</inlineHelpText>
        <label>Max OTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Maximum_salary__c</fullName>
        <label>Maximum salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Medical_form_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical form required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Minimum_salary__c</fullName>
        <label>Minimum salary</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_of_vacanct_posts__c</fullName>
        <label>No of vacant posts</label>
        <summaryFilterItems>
            <field>xcdhcm__Post__c.xcdhcm__Post_status__c</field>
            <operation>equals</operation>
            <value>Vacancy</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Post__c.xcdhcm__Company_job_role_L__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Politically_restricted_post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Politically restricted post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Posts_on_hold__c</fullName>
        <label>Posts on hold</label>
        <summaryFilterItems>
            <field>xcdhcm__Post__c.xcdhcm__Post_status__c</field>
            <operation>equals</operation>
            <value>On hold</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Post__c.xcdhcm__Company_job_role_L__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Responsibilities__c</fullName>
        <description>These are the responsibilities of this company job role.</description>
        <inlineHelpText>Please enter the the responsibilities of this company job role.</inlineHelpText>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Skills_Required__c</fullName>
        <description>The skills required for this company job role.</description>
        <inlineHelpText>Please enter the skills required for this company job role.</inlineHelpText>
        <label>Skills required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Target_OTE__c</fullName>
        <description>This is the minimum pay for this company job role.</description>
        <inlineHelpText>Please enter the minimum pay for this company job role.</inlineHelpText>
        <label>Target OTE</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_Hours_Per_Week__c</fullName>
        <description>This is the total number of working hours per week for this company job role.</description>
        <inlineHelpText>Please enter the total number of working hours per week for this company job role.</inlineHelpText>
        <label>Hours per week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether travel will be required with this company job role.</description>
        <inlineHelpText>Please check this box if  travel will be required with this company job role.</inlineHelpText>
        <label>Travel required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type_of_change__c</fullName>
        <label>Type of change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Job</fullName>
                </value>
                <value>
                    <fullName>Amended Job</fullName>
                </value>
                <value>
                    <fullName>Delete Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company Job Role</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Job_Code__c</columns>
        <columns>xcdhcm__Companies_Name__c</columns>
        <columns>xcdhcm__Department__c</columns>
        <columns>xcdhcm__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Current_roles</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Companies_Name__c</columns>
        <columns>xcdhcm__Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Current roles</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Job Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>